<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_all_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="56dp"
    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/ic_img_close_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_opt_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_opti"
        android:textAppearance="@style/filter_opti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/done_btn"
        app:layout_constraintBottom_toBottomOf="@+id/done_btn"
        tools:text="Filter Options" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done_btn"
        android:layout_width="86dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@drawable/rectangle_10"
        android:gravity="center"
        android:text="@string/done"
        android:textAppearance="@style/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/brand_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/brand"
        android:textAppearance="@style/brand_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phones_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_txt">

        <AutoCompleteTextView
            android:id="@+id/phones_autocomplete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/samsung"
            android:textAppearance="@style/samsung"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/price_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/price"
        android:textAppearance="@style/brand_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phones_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_txt">

        <AutoCompleteTextView
            android:id="@+id/price_autocomplete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/price_filtered"
            android:textAppearance="@style/samsung"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/size_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/size"
        android:textAppearance="@style/brand_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/size_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_txt">

        <AutoCompleteTextView
            android:id="@+id/size_autocomplete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/size_filtered"
            android:textAppearance="@style/samsung"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
